--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -17,3 +17,18 @@ FORM:
       LABEL: 'Accept terms of service'
     USERNAME:
       LABEL: 'Username'
+MAIL:
+  REGISTER:
+    TITLE: 'Activate your account'
+    INFO: 'Hi %name%, your account was successfully created on Numeripic, just one more step - activate it please!'
+    HTML:
+      LINK:
+        INFO: 'Please click'
+        LABEL: 'on this link'
+    TXT:
+      LINK:
+        INFO: 'Please copy this link in your browser: '
+REGISTRATION:
+  ACTIVATION:
+    TITLE: 'Numeripic - activation needed'
+    INFO: 'Your account was created, please check your email account to activate the profile'
