--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -1,20 +1,21 @@
+NAV.HOME: 'Home'
+NAV.TERMS: 'Terms'
+NAV.REGISTER: 'Register'
+NAV.LOGIN: 'Login'
+NAV.LOGOUT: 'Logout'
 NAV:
-  HOME: 'Home'
-  TERMS: 'Terms'
-  LOGIN: 'Login'
-  REGISTER: 'Register'
-LOGIN:
-    INFO: 'Please sign in'
-    USERNAME.LABEL: 'Username'
-    PASSWORD.LABEL: 'Password'
-    SUBMIT: 'Sign in'
+  LOGGED_AS: 'Logged as: '
+LOGIN.INFO: 'Please sign in'
+LOGIN.USERNAME: 'Username'
+LOGIN.PASSWORD: 'Password'
+LOGIN.SUBMIT: 'Sign in'
 FORM:
   USER:
     PASSWORD:
       LABEL: 'Password'
       LABEL2: 'Repeat password'
     TOS:
-      LABEL: 'Accept terms of service'
+      LABEL: 'Accept terms of services'
     USERNAME:
       LABEL: 'Username'
 MAIL:
