add email security and fix marge

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -4,7 +4,7 @@ NAV.REGISTER: 'Register'
 NAV.LOGIN: 'Login'
 NAV.LOGOUT: 'Logout'
 NAV:
-  LOGGED_AS: 'Logged as: '
+  LOGGED_AS: 'Hi %name% '
 LOGIN.INFO: 'Please sign in'
 LOGIN.USERNAME: 'Username'
 LOGIN.PASSWORD: 'Password'
