--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -3,7 +3,10 @@ NAV.TERMS: 'Terms'
 NAV.REGISTER: 'Register'
 NAV.LOGIN: 'Login'
 NAV.LOGOUT: 'Logout'
+NAV.ADDPICTURE: 'Add picture'
+
 NAV:
+
   LOGGED_AS: 'Hi %name% '
 LOGIN.INFO: 'Please sign in'
 LOGIN.USERNAME: 'Username'
@@ -19,6 +22,7 @@ FORM:
     USERNAME:
       LABEL: 'Username'
     PICTURE:
+      INFO: 'Please add a picture'
       TITLE:
         LABEL: 'Title'
       DESCRIPTION:
